Added JSON Schema validation
