# api-gateway/swagger.yaml
@@ -10,7 +10,7 @@ info:
     name: "Apache 2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
 # host: "petstore.swagger.io"
-basePath: "/"
+basePath: ""
 tags:
 - name: "authentication"
   description: "Request access token needed to use other routes"
@@ -35,13 +35,11 @@ paths:
       - "application/json"
       parameters:
       - in: "body"
-        name: "email"
-        description: "An email that indentifies the user"
+        name: "user"
+        description: "Email and Password of the user"
         required: true
-      - in: "body"
-        name: "password"
-        description: "The password of the user"
-        required: true
+        schema:
+          $ref: "#/definitions/User"
       responses:
         200:
           description: "The login was successful"
@@ -62,7 +60,7 @@ paths:
       - "application/json"
       parameters:
       - in: "body"
-        name: "body"
+        name: "user"
         description: "Email and Password of the user"
         required: true
         schema:
@@ -88,7 +86,7 @@ paths:
       - "application/json"
       parameters:
       - in: "body"
-        name: "body"
+        name: "contact"
         description: "Data of the user contact"
         required: true
         schema:
@@ -123,6 +121,9 @@ definitions:
       name: "Authentication"
   User:
     type: "object"
+    required:
+      - email
+      - password
     properties:
       id:
         type: "integer"
@@ -135,6 +136,8 @@ definitions:
       name: "User"
   Contact:
     type: "object"
+    required:
+      - email
     properties:
       id:
         type: "integer"
